# thetask

./: .gitignore  Application.hs  Fields.hs  Foundation.hs  Import.hs  Model.hs  PathPieces.hs  devel.hs  thetask.cabal
Forms/: Group.hs  GroupPermission.hs  User.hs  UserGroup.hs
Handler/: Group.hs  GroupPermission.hs  GroupPermissions.hs  Groups.hs  Home.hs  User.hs  UserGroup.hs  UserGroups.hs  Users.hs
Models/: User.hs
config/: keter.yaml  models  routes  sqlite.yml
deploy/: Procfile
templates/: homepage.hamlet
templates/Group/: attach_user.hamlet  edit.hamlet  new_permission.hamlet  show.hamlet
templates/Groups/: attach_user.hamlet  edit.hamlet  index.hamlet  new.hamlet  new_permission.hamlet  show.hamlet
templates/User/: edit.hamlet  show.hamlet
templates/Users/: edit.hamlet  index.hamlet  new.hamlet  show.hamlet
