name:              thetask
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Fields
                     Forms.Group
                     Forms.GroupPermission
                     Forms.User
                     Forms.UserGroup
                     Foundation
                     Handler.Group
                     Handler.GroupPermission
                     Handler.Groups
                     Handler.UserGroup
                     Handler.UserGroups
                     Handler.Users
                     Handler.GroupPermissions
                     Import
                     Model
                     PathPieces
                     Settings
                     Settings.Development
                     Settings.StaticFiles
                 --    Handler.Home

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4          && < 5
                 , aeson
                 , blaze-markup
                 , bytestring                    >= 0.9        && < 0.11
                 , conduit                       >= 1.0
                 , data-default
                 , directory                     >= 1.1        && < 1.3
                 , esqueleto
                 , fast-logger                   >= 2.0
                 , hamlet                        >= 1.1        && < 1.2
                 , hjsmin                        >= 0.1        && < 0.2
                 , http-conduit                  >= 2.0        && < 2.1
                 , monad-control                 >= 0.3        && < 0.4
                 , monad-logger                  >= 0.3
                 , persistent                    >= 1.2        && < 1.3
                 , persistent-sqlite             >= 1.2        && < 1.3
                 , persistent-template           >= 1.2        && < 1.3
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.2        && < 1.3
                 , shakespeare-text              >= 1.0        && < 1.1
                 , template-haskell
                 , text                          >= 0.11       && < 0.12
                 , wai-extra                     >= 2.0        && < 2.1
                 , wai-logger                    >= 2.0
                 , warp                          >= 2.0        && < 2.1
                 , yaml                          >= 0.8        && < 0.9
                 , yesod                         >= 1.2        && < 1.3
                 , yesod-auth                    >= 1.2        && < 1.3
                 , yesod-core                    >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , yesod-persistent              >= 1.2        && < 1.3
                 , yesod-static                  >= 1.2        && < 1.3

executable         thetask
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , thetask
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , thetask
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
